update the style of the customer section

--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -44,7 +44,7 @@
                   type="number" aria-describedby="helper-text-explanation" id="customer_id" 
                 class="border text-sm rounded-lg block w-[11rem] mt-1.5 p-2.5 dark:bg-gray-700 dark:border-gray-600
                   dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="Search" required />
+                  placeholder="ID or Phone" required />
               <form>
             </div>
             <button data-tooltip-target="tooltip-right" data-tooltip-placement="right">
@@ -53,8 +53,9 @@
             <div 
               id="tooltip-right" role="tooltip" 
               class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium
-              text-white rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-500"> <p> - Write the Customer ID </p>
-              <p> - press "Enter" from the keyboard </p>
+              text-white rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-500">
+              <p> - Write the Customer ID  or Phone</p>
+              <p> - press "Enter" from the keyboard or anywhere out of the input </p>
               <p> - If the user is exist the next form will be filled with the customer data </p>
               <div class="tooltip-arrow" data-popper-arrow></div>
             </div>
