--- a/templates/cashier/forms/customer_info.html
+++ b/templates/cashier/forms/customer_info.html
@@ -94,6 +94,7 @@
       hx-get="{% url "clear_customer_info" %}"
       hx-target="#customer"
       hx-swap="innerHtml"
+      hx-trigger="click, clear from:body"
       _="on click reset() the #customer_id_form"
       class="block text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none
       focus:ring-gray-300 font-medium rounded-lg text-sm w-24 h-9 px-5 py-2.5 text-center dark:bg-gray-600
