--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -13,7 +13,8 @@
         _="on click if (parseInt(#counter-input-{% now "G:i:s" %}.value) > 1)
         then set #counter-input-{% now "G:i:s" %}'s value to (parseInt(#counter-input-{% now "G:i:s" %}.value) - 1) 
         then set #total-price-{% now "G:i:s" %}.innerText to
-        ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"
+        ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))
+        then call calculateTotal()"
         type="button"
         class="flex-shrink-0 bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600
         hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md
@@ -26,12 +27,14 @@
       text-sm font-normal focus:outline-none focus:ring-0 w-[2rem] text-center"
       value="1"
       _="on change set #total-price-{% now "G:i:s" %}.innerText to
-      ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"/>
+      ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))
+      then call calculateTotal()"/>
       <button
         _="on click set #counter-input-{% now "G:i:s" %}'s value to
         (parseInt(#counter-input-{% now "G:i:s" %}.value) + 1)
         then set #total-price-{% now "G:i:s" %}.innerText to
-        ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"
+        ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))
+        then call calculateTotal()"
         type="button" id="decrement-button" 
         class="flex-shrink-0 bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600
         hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md
@@ -44,13 +47,15 @@
   <td class="px-2 py-4 text-base">
     <select id="delivery-type-{% now "G:i:s" %}"
       _="on change if my.value == 'F' then 
-         set #price-{% now "G:i:s" %}.innerText to {{ product_line.fawry_price }} 
-         then set #total-price-{% now "G:i:s" %}.innerText to 
-         ({{ product_line.fawry_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2) 
-         else 
-         set #price-{% now "G:i:s" %}.innerText to {{ product_line.normal_price }} 
-         then set #total-price-{% now "G:i:s" %}.innerText to 
-         ({{ product_line.normal_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2)"
+      set #price-{% now "G:i:s" %}.innerText to {{ product_line.fawry_price }} 
+      then set #total-price-{% now "G:i:s" %}.innerText to 
+      ({{ product_line.fawry_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2) 
+      then call calculateTotal()
+      else 
+      set #price-{% now "G:i:s" %}.innerText to {{ product_line.normal_price }} 
+      then set #total-price-{% now "G:i:s" %}.innerText to 
+      ({{ product_line.normal_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2)
+      then call calculateTotal()"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-full focus:ring-blue-500
       focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
       dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
@@ -78,7 +83,8 @@
         <i class="fa-solid fa-pen-to-square"></i>
       </a>
       <a 
-        _="on click if confirm('Are you sure you want to delete this row?') then remove closest <tr/>"
+        _="on click if confirm('Are you sure you want to delete this row?') then remove closest <tr/>
+        then call calculateTotal()"
         class="cursor-pointer hover:text-red-700">
         <i class="fa-solid fa-trash"></i>
       </a>
@@ -102,7 +108,7 @@
           <td class="px-2 py-2 text-base">
             {% now "Y-m-d H:i:s" as current_datetime %}
             {% with current_datetime|add_days:product_line.deliver_date as new_datetime %}
-              {{ new_datetime|date:"M d, Y g:i a" }}
+            {{ new_datetime|date:"M d, Y g:i a" }}
             {% endwith %}
           </td>
         </tr>
@@ -114,4 +120,3 @@
     </table>
   </td>
 </tr>
-
