--- a/templates/cashier/tables/order_details_table.html
+++ b/templates/cashier/tables/order_details_table.html
@@ -1,4 +1,4 @@
-<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+<table id="products-table" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
   <thead class="sticky top-0 text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
       <th scope="col" class="px-2 py-3">name</th>
@@ -17,3 +17,17 @@
   <tbody id="table_body">
   </tbody>
 </table>
+
+
+<script>
+  function calculateTotal() {
+    let grandTotal = 0;
+    document.querySelectorAll('[id^="total-price-"]').forEach(function(element) {
+      grandTotal += parseFloat(element.innerText);
+    });
+    document.getElementById('grand-total').innerText = grandTotal.toFixed(2);
+  }
+
+  // Initial calculation when the page loads
+  document.addEventListener('DOMContentLoaded', calculateTotal);
+</script>
