--- a/templates/cashier/tables/product_list.html
+++ b/templates/cashier/tables/product_list.html
@@ -21,6 +21,7 @@
             hx-target="#table_body"
             hx-swap="beforeend"
             hx-trigger="click delay:1s"
+            _="on click wait 1.5s call calculateTotal()"
             class="text-lg text-gray-300 odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800
             dark:hover:bg-gray-600 cursor-pointer">
             <td class="px-3 py-3 ">
