--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,16 +1,16 @@
-<nav class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-900 dark:border-gray-800">
+<nav class="fixed top-0 z-50 w-full border-b bg-gray-900 border-gray-800">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start rtl:justify-end">
         <button data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
-          type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden 
-          hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+          type="button" class="inline-flex items-center p-2 text-sm rounded-lg md:hidden 
+          focus:outline-none focus:ring-2 text-gray-400 hover:bg-gray-700 focus:ring-gray-600">
           <span class="sr-only">Open sidebar</span>
           <i class="fa-solid fa-list-ul text-2xl"></i>
         </button>
         <a href="{% url "home" %}" class="flex ms-2 md:me-24 items-center">
           <i class="fa-solid fa-camera mx-2 text-2xl" style="color: #ffffff;"></i>
-          <span class="text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Studio Vision</span>
+          <span class="text-xl font-semibold sm:text-2xl whitespace-nowrap text-white">Studio Vision</span>
         </a>
       </div>
       <div class="flex items-center">
@@ -26,13 +26,13 @@
             </button>
           </div>
           {% if user.is_authenticated %}
-          <div class="z-50 hidden my-4 text-base list-none bg-white 
-            divide-y divide-gray-100 rounded shadow dark:bg-gray-700 dark:divide-gray-600" id="dropdown-user">
+          <div class="z-50 hidden my-4 text-base list-none 
+            divide-y rounded shadow bg-gray-700 divide-gray-600" id="dropdown-user">
             <div class="px-4 py-3" role="none">
-              <p class="text-sm text-gray-900 dark:text-white dark:font-semibold mb-1" role="none">
+              <p class="text-sm text-white font-semibold mb-1" role="none">
                 {{ request.user.first_name }} {{ request.user.last_name }}
               </p>
-              <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
+              <p class="text-sm font-medium truncate text-gray-300" role="none">
                 {{ request.user.email }}
               </p>
             </div>
@@ -40,8 +40,8 @@
               <li>
                 <form action="{% url 'logout' %}" method="post">
                   {% csrf_token %}
-                  <button type="submit" class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 
-                    dark:text-gray-300 dark:hover:bg-red-800 dark:hover:text-white" role="menuitem">Logout</button>
+                  <button type="submit" class="block w-full px-4 py-2 text-sm 
+                    text-gray-300 hover:bg-red-800 hover:text-white" role="menuitem">Logout</button>
                 </form>
               </li>
             </ul>
