--- a/templates/settings/inventory/inventory.html
+++ b/templates/settings/inventory/inventory.html
@@ -2,20 +2,20 @@
   <!-- Breadcrumb -->
   <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+      <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
         <i class=" fas fa-home"></i>
         <a href="{% url 'home' %}" class="inline-flex items-center text-sm font-medium">
           Home
         </a> 
         <i class="fa-solid fa-angle-right"></i>
-      </li> <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+      </li> <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
         <a href="{% url 'settings' %}" class="inline-flex items-center text-sm font-medium">
           Settings
         </a> 
         <i class="fa-solid fa-angle-right"></i>
       </li>
-      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-        <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">
+      <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
+        <span class="ms-1 text-sm font-medium md:ms-2 text-gray-400">
           Inventory
         </span>
       </li>
