--- a/templates/settings/inventory/tables/attribute_table.html
+++ b/templates/settings/inventory/tables/attribute_table.html
@@ -1,5 +1,5 @@
-<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-  <thead class="sticky top-0 text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<table class="w-full text-sm text-left rtl:text-right text-gray-400">
+  <thead class="sticky top-0 text-sm uppercase bg-gray-700 text-gray-400">
     <tr>
       <th scope="col" class="px-3 py-3">Name</th>
       <th scope="col" class="px-3 py-3">Desc</th>
@@ -10,7 +10,7 @@
   </thead>
   <tbody>
     {% for attribute in attribute_list %}
-    <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
+    <tr class=" odd:bg-gray-900 even:bg-gray-800">
       <td class="px-3 py-4 text-base">{{ attribute.name }}</td>
       <td class="px-3 py-4 text-base text-ellipsis">{{ attribute.description|slice:"5" }}{% if attribute.description|length > 5 %}...{% endif %}</td>
       {% if perms.orders.change_product %}
