--- a/templates/settings/inventory/tabs/product_line.html
+++ b/templates/settings/inventory/tabs/product_line.html
@@ -5,17 +5,17 @@
     class="p-4 rounded-lg h-modal">
     {% for message in messages %}
     <div class="fixed top-16 right-0 w-1/4">
-      <div id="alert-2" class="flex items-center p-4 mb-4 text-red-800 rounded-lg rounded-t-none 
-        bg-red-50 dark:bg-gray-800 dark:text-red-400 border-t-4 border-red-500" role="alert">
+      <div id="alert-2" class="flex items-center p-4 mb-4 rounded-lg rounded-t-none 
+        text-red-400 border-t-4 border-red-500" role="alert">
         <div class="ms-3 text-sm font-medium">
           {{ message }}
         </div>
         <button 
             type="button" 
             _="on click add .hidden to #alert-2"
-            class="ms-auto -mx-1.5 -my-1.5 bg-red-50 text-red-500 rounded-lg 
-            focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex
-            items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-red-400 dark:hover:bg-gray-700" >
+            class="ms-auto -mx-1.5 -my-1.5 rounded-lg 
+            focus:ring-2 focus:ring-red-400 p-1.5 inline-flex
+            items-center justify-center h-8 w-8 bg-gray-800 text-red-400 hover:bg-gray-700" >
           <i class="fa-solid fa-xmark"></i>
         </button>
       </div>
@@ -34,9 +34,9 @@
             hx-target="#modal_form"
             hx-swap="innerHtml"
             _="on click remove .hidden from modal_div " 
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
-            font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-            dark:focus:ring-blue-800" type="button">
+            class="text-white focus:ring-4 focus:outline-none
+            font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
+            focus:ring-blue-800" type="button">
             Add
           </button>
           {% endif %}
@@ -58,9 +58,9 @@
             hx-target="#modal_form"
             hx-swap="innerHtml"
             _="on click remove .hidden from modal_div " 
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
-            font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-            dark:focus:ring-blue-800" type="button">
+            class="text-white focus:ring-4 focus:outline-none
+            font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
+            focus:ring-blue-800" type="button">
             Add
           </button>
           {% endif %}
@@ -78,7 +78,7 @@
     class="hidden overflow-y-auto overflow-x-hidden fixed left-0 top-0 bg-black 
     bg-opacity-50 w-screen h-screen flex justify-center items-center z-50 md:inset-0 ">
     <div class="relative p-4 w-full max-w-lg max-h-full">
-      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 p-6 my-6">
+      <div class="relative rounded-lg shadow bg-gray-700 p-6 my-6">
         <div id="modal_form"> </div>
       </div>
     </div>
