--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -9,10 +9,10 @@
       hx-target="#settings_content"
       hx-swap="innerHtml"
       _="on click remove .bg-gray-700 from <a/> in .ul_items then add .bg-gray-700 to me"
-      class="flex items-top p-2 text-gray-900 bg-gray-700 rounded-lg dark:text-white hover:bg-gray-100 
-      dark:hover:bg-gray-700 group cursor-pointer">
-      <span class="inline-block text-gray-500 transition duration-75 
-        dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+      class="flex items-top p-2 bg-gray-700 rounded-lg text-white 
+      hover:bg-gray-700 group cursor-pointer">
+      <span class="inline-block transition duration-75 
+        text-gray-200 group-hover:text-white">
         <i class="text-xl fa-solid fa-circle-plus"></i>
       </span>
         <span class="ms-5 text-gray-300 text-lg">Employee</span>
@@ -26,10 +26,10 @@
       hx-target="#settings_content"
       hx-swap="innerHTML"
       _="on click remove .bg-gray-700 from <a/> in .ul_items then add .bg-gray-700 to me"
-      class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
-      dark:hover:bg-gray-700 group cursor-pointer max-h-full">
-      <span class="inline-block text-gray-500 transition duration-75 
-        dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+      class="flex items-top p-2 rounded-lg text-white 
+      hover:bg-gray-700 group cursor-pointer max-h-full">
+      <span class="inline-block transition duration-75 
+        text-gray-200 group-hover:text-white">
         <i class="text-xl fa-solid fa-circle-plus"></i>
       </span>
         <span class="ms-5 text-gray-300 text-lg">Inventory</span>
