--- a/templates/settings/employee/tables/login_table.html
+++ b/templates/settings/employee/tables/login_table.html
@@ -1,5 +1,5 @@
-<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-  <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<table class="w-full text-sm text-left rtl:text-right text-gray-400">
+  <thead class="text-sm uppercase bg-gray-700 text-gray-400">
     <tr>
       <th scope="col" class="px-6 py-3">Date</th>
       <th scope="col" class="px-6 py-3">Status</th>
@@ -7,7 +7,7 @@
   </thead>
   <tbody>
     {% for login in login_history %}
-    <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
+    <tr class=" odd:bg-gray-900 even:bg-gray-800">
       <td class="px-6 py-4 text-base">{{ login.date_time }}</td>
       <td class="px-6 py-4 text-base">
         {% if login.is_login %}
