--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -2,20 +2,20 @@
   <!-- Breadcrumb -->
   <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+      <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
         <i class=" fas fa-home"></i>
         <a href="{% url 'home' %}" class="inline-flex items-center text-sm font-medium">
           Home
         </a> 
         <i class="fa-solid fa-angle-right"></i>
-      </li> <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+      </li> <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
         <a href="{% url 'settings' %}" class="inline-flex items-center text-sm font-medium">
           Settings
         </a> 
         <i class="fa-solid fa-angle-right"></i>
       </li>
-      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-        <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">
+      <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
+        <span class="ms-1 text-sm font-medium md:ms-2 text-gray-400">
           Employee
         </span>
       </li>
@@ -35,9 +35,9 @@
       hx-target="#modal_form"
       hx-swap="innerHtml"
       _="on click remove .hidden from modal_div " 
-      class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
-      font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-      dark:focus:ring-blue-800 my-3" type="button">
+      class="block text-white focus:ring-4 focus:outline-none
+      font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
+      focus:ring-blue-800 my-3" type="button">
       Add Employee
     </button>
     {% endif %}
@@ -48,7 +48,7 @@
       class="hidden overflow-y-auto overflow-x-hidden fixed left-0 top-0 bg-black 
       bg-opacity-50 w-screen h-screen flex justify-center items-center z-50 md:inset-0 ">
       <div class="relative p-4 w-full max-w-lg max-h-full">
-        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 p-6 my-6">
+        <div class="relative rounded-lg shadow bg-gray-700 p-6 my-6">
           <div id="modal_form"> </div>
         </div>
       </div>
