--- a/templates/settings/employee/tables/actions_table.html
+++ b/templates/settings/employee/tables/actions_table.html
@@ -1,5 +1,5 @@
-<table class="w-full truncate text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-  <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<table class="w-full truncate text-sm text-left rtl:text-right text-gray-400">
+  <thead class="text-sm uppercase bg-gray-700 text-gray-400">
     <tr>
       <th scope="col" class="px-6 py-3">Action</th>
       <th scope="col" class="px-6 py-3">Type</th>
@@ -9,7 +9,7 @@
   </thead>
   <tbody>
     {% for action in actions %}
-    <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
+    <tr class=" odd:bg-gray-900 even:bg-gray-800">
       <td class="px-6 py-4 text-base">{{ action.get_event_type_display }}</td>
       <td class="px-6 py-4 text-base">{{ action.content_type }}</td>
       <td class="px-6 py-4 text-base">{{ action.object_repr }}</td>
