--- a/templates/settings/employee/tabs/deduction.html
+++ b/templates/settings/employee/tabs/deduction.html
@@ -17,9 +17,9 @@
         hx-target="#modal_form"
         hx-swap="innerHtml"
         _="on click remove .hidden from modal_div " 
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
-        font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-        dark:focus:ring-blue-800 my-3" type="button">
+        class="text-white focus:ring-4 focus:outline-none
+        font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
+        focus:ring-blue-800 my-3" type="button">
         Edit
       </button>
     </div>
@@ -31,7 +31,7 @@
     class="hidden overflow-y-auto overflow-x-hidden fixed left-0 top-0 bg-black 
     bg-opacity-50 w-screen h-screen flex justify-center items-center z-50 md:inset-0 ">
     <div class="relative p-4 w-full max-w-lg max-h-full">
-      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 p-6 my-6">
+      <div class="relative rounded-lg shadow bg-gray-700 p-6 my-6">
         <div id="modal_form"> </div>
       </div>
     </div>
