--- a/templates/settings/employee/tabs/info.html
+++ b/templates/settings/employee/tabs/info.html
@@ -9,26 +9,26 @@
         <p class="text-white text-lg m-2"> User Information</p>
       </div>
       <div class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg ">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-200">
           <tbody>
-            <tr class="border-b border-gray-200 dark:border-gray-600">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Username </th>
+            <tr class="border-b border-gray-600">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white Username </th>
               <td class="px-6 py-4"> {{ user.user.username }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-600">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> First Name </th>
+            <tr class="border-b border-gray-600">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> First Name </th>
               <td class="px-6 py-4"> {{ user.user.first_name }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-600">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Last Name </th>
+            <tr class="border-b border-gray-600">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Last Name </th>
               <td class="px-6 py-4"> {{ user.user.last_name }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-600">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Email </th>
+            <tr class="border-b border-gray-600">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Email </th>
               <td class="px-6 py-4"> {{ user.user.email }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Active </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Active </th>
               <td class="px-6 py-4">
                 {% if user.user.is_active %}
                 <i class="far fa-check-circle" style="color: #63e6be;"></i>
@@ -47,9 +47,9 @@
           hx-target="#modal_form"
           hx-swap="innerHtml"
           _="on click remove .hidden from modal_div " 
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
-          font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-          dark:focus:ring-blue-800 my-3" type="button">
+          class="text-white focus:ring-4 focus:outline-none
+          font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
+          focus:ring-blue-800 my-3" type="button">
           Edit
         </button>
         <button 
@@ -57,9 +57,9 @@
           hx-target="#modal_form"
           hx-swap="innerHtml"
           _="on click remove .hidden from modal_div " 
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
-          font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-          dark:focus:ring-blue-800 my-3" type="button">
+          class="text-white focus:ring-4 focus:outline-none
+          font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
+          focus:ring-blue-800 my-3" type="button">
           Reset Password
         </button>
       </div>
@@ -71,38 +71,38 @@
         <p class="text-white text-lg m-2"> Profile Information</p>
       </div>
       <div class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg ">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-400">
           <tbody>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Job Title </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Job Title </th>
               <td class="px-6 py-4"> {{ user.job_title.name }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> City </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> City </th>
               <td class="px-6 py-4"> {{ user.city.name }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Adress </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Adress </th>
               <td class="px-6 py-4"> {{ user.address }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Birth Day </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Birth Day </th>
               <td class="px-6 py-4"> {{ user.date_of_birth }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Start at </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Start at </th>
               <td class="px-6 py-4"> {{ user.start}} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Gender </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Gender </th>
               <td class="px-6 py-4"> {{ user.get_gender_display }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Age </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Age </th>
               <td class="px-6 py-4"> {{ user.age }} </td>
             </tr>
-            <tr class="border-b border-gray-200 dark:border-gray-800">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-700"> Salary </th>
+            <tr class="border-b border-gray-800">
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Salary </th>
               <td class="px-6 py-4"> {{ user.salary }} </td>
             </tr>
           </tbody>
@@ -115,9 +115,9 @@
           hx-target="#modal_form"
           hx-swap="innerHtml"
           _="on click remove .hidden from modal_div " 
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
-          font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
-          dark:focus:ring-blue-800 my-3" type="button">
+          class="text-white focus:ring-4 focus:outline-none
+          font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
+          focus:ring-blue-800 my-3" type="button">
           Edit
         </button>
       </div>
@@ -151,7 +151,7 @@
     class="hidden overflow-y-auto overflow-x-hidden fixed left-0 top-0 bg-black 
     bg-opacity-50 w-screen h-screen flex justify-center items-center z-50 md:inset-0 ">
     <div class="relative p-4 w-full max-w-lg max-h-full">
-      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 p-6 my-6">
+      <div class="relative rounded-lg shadow bg-gray-700 p-6 my-6">
         <div id="modal_form"> </div>
       </div>
     </div>
